--- a/.github/workflows/deploy-image.yaml
+++ b/.github/workflows/deploy-image.yaml
@@ -21,4 +21,15 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: oduodg/munji-frontend:latest
+        tags: oduodg/munji-frontend:${{ github.sha }}
+  # 
+  # update Image tag to front-deploy.yaml
+  #
+  - name: Check out k8s repo
+    uses: actions/chekout@v3
+    with:
+      repository: munji-goorm/manifest
+  - name: git push image tag to k8 repo
+    run: ls -al
+
+    
