--- a/.github/workflows/deploy-image.yaml
+++ b/.github/workflows/deploy-image.yaml
@@ -22,3 +22,13 @@ jobs:
       with:
         push: true
         tags: oduodg/munji-frontend:${{ github.sha }}
+  # 
+  # update Image tag to front-deploy.yaml
+  #
+    - name: Check out k8s repo
+      uses: actions/chekout@v3
+      with:
+        repository: munji-goorm/manifest
+        token: ${{ secrets.GIT_ACCESS_TOKEN }}
+    - name: git push image tag to k8 repo
+      run: ls -al
