--- a/.github/workflows/deploy-image.yaml
+++ b/.github/workflows/deploy-image.yaml
@@ -26,7 +26,7 @@ jobs:
   # update Image tag to front-deploy.yaml
   #
     - name: Check out k8s repo
-      uses: actions/chekout@v3
+      uses: actions/chekout@master
       with:
         repository: munji-goorm/manifest
         token: ${{ secrets.GIT_ACCESS_TOKEN }}
