--- a/.github/workflows/deploy-image.yaml
+++ b/.github/workflows/deploy-image.yaml
@@ -26,9 +26,15 @@ jobs:
   # update Image tag to front-deploy.yaml
   #
     - name: Check out k8s repo
-      uses: actions/checkout@master
+      uses: actions/chekout@master
       with:
         repository: munji-goorm/manifest
         token: ${{ secrets.GIT_ACCESS_TOKEN }}
+        path: manifest
     - name: git push image tag to k8 repo
-      run: ls -al
+      run: |
+      cd manifest
+      sed "39 c\        image: oduodg/mungi-frontend:${{ github.sha }}" front-deploy.yaml
+      git add .
+      git commit -m "Edit front image tag"
+      git push -f --set-upstream origin main
