--- a/.github/workflows/deploy-image.yaml
+++ b/.github/workflows/deploy-image.yaml
@@ -25,6 +25,10 @@ jobs:
   # 
   # update Image tag to front-deploy.yaml
   #
+    - name: Git config
+      run: |
+        git config --global user.email "werewildfire@gmail.com"
+        git config --global user.name "oduodg"
     - name: Check out k8s repo
       uses: actions/chekout@master
       with:
@@ -33,8 +37,8 @@ jobs:
         path: manifest
     - name: git push image tag to k8 repo
       run: |
-      cd manifest
-      sed "39 c\        image: oduodg/mungi-frontend:${{ github.sha }}" front-deploy.yaml
-      git add .
-      git commit -m "Edit front image tag"
-      git push -f --set-upstream origin main
+        cd manifest
+        sed "39 c\        image: oduodg/mungi-frontend:${{ github.sha }}" front-deploy.yaml
+        git add .
+        git commit -m "Edit front image tag"
+        git push -f --set-upstream origin main
