--- a/.github/workflows/deploy-image.yaml
+++ b/.github/workflows/deploy-image.yaml
@@ -30,7 +30,7 @@ jobs:
         git config --global user.email "werewildfire@gmail.com"
         git config --global user.name "oduodg"
     - name: Check out k8s repo
-      uses: actions/chekout@master
+      uses: actions/checkout@master
       with:
         repository: munji-goorm/manifest
         token: ${{ secrets.GIT_ACCESS_TOKEN }}
