--- a/.github/workflows/deploy-image.yaml
+++ b/.github/workflows/deploy-image.yaml
@@ -10,7 +10,9 @@ jobs:
     - name: Checkout Actions
       uses: actions/checkout@v3
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
+      env:
+        REACT_APP_KAKAOMAP_API_KEY_JS=${{ secrets.REACT_APP_KAKAOMAP_API_KEY_JS }}
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
@@ -20,7 +22,6 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
-        build_args: REACT_APP_KAKAOMAP_API_KEY_JS=${{ secrets.REACT_APP_KAKAOMAP_API_KEY_JS }}
         push: true
         tags: oduodg/munji-frontend:${{ github.sha }}
   # 
