--- a/.github/workflows/deploy-image.yaml
+++ b/.github/workflows/deploy-image.yaml
@@ -11,8 +11,6 @@ jobs:
       uses: actions/checkout@v3
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-      env:
-        REACT_APP_KAKAOMAP_API_KEY_JS=${{ secrets.REACT_APP_KAKAOMAP_API_KEY_JS }}
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
@@ -22,6 +20,7 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
+        build-args: REACT_APP_KAKAOMAP_API_KEY_JS=${{ secrets.REACT_APP_KAKAOMAP_API_KEY_JS }}
         push: true
         tags: oduodg/munji-frontend:${{ github.sha }}
   # 
