--- a/.github/workflows/deploy-image.yaml
+++ b/.github/workflows/deploy-image.yaml
@@ -33,22 +33,6 @@ jobs:
         docker build --build-arg REACT_APP_KAKAOMAP_API_KEY_JS=${{ secrets.REACT_APP_KAKAOMAP_API_KEY_JS }} --build-arg REACT_APP_KAKAOMAP_API_KEY_REST=${{ secrets.REACT_APP_KAKAOMAP_API_KEY_REST}} --build-arg REACT_APP_STATION_API_KEY=${{ secrets.REACT_APP_STATION_API_KEY}} -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-
-    # - name: Login to DockerHub
-    #   uses: docker/login-action@v1
-    #   with:
-    #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-    #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-    # - name: Build and push
-    #   id: docker_build
-    #   uses: docker/build-push-action@v2
-    #   with:
-    #     build-args: |
-    #       REACT_APP_KAKAOMAP_API_KEY_JS=${{ secrets.REACT_APP_KAKAOMAP_API_KEY_JS }}
-    #       REACT_APP_KAKAOMAP_API_KEY_REST=${{ secrets.REACT_APP_KAKAOMAP_API_KEY_REST}}
-    #       REACT_APP_STATION_API_KEY=${{ secrets.REACT_APP_STATION_API_KEY}}
-    #     push: true
-    #     tags: oduodg/munji-frontend:${{ github.sha }}
   # 
   # update Image tag to front-deploy.yaml
   #
@@ -65,7 +49,7 @@ jobs:
     - name: git push image tag to k8 repo
       run: |
         cd manifest
-        sed -i "40 c\        image: oduodg/munji-frontend:${{ github.sha }}" front-deploy.yaml
+        sed -i "40 c\        image: 320451040304.dkr.ecr.ap-northeast-2.amazonaws.com/munji-repo:${{ github.sha }}" front-deploy.yaml
         git add .
         git commit -m "Edit front image tag"
         git push -f --set-upstream origin main
