--- a/.github/workflows/deploy-image.yaml
+++ b/.github/workflows/deploy-image.yaml
@@ -2,7 +2,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - container
+      - prod
 jobs:
   build-and-push-image:
     runs-on: ubuntu-20.04
