--- a/.github/workflows/deploy-image.yaml
+++ b/.github/workflows/deploy-image.yaml
@@ -11,10 +11,8 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Generate Environment Variables File for Production
-      env: 
-        REACT_APP_KAKAOMAP_API_KEY_JS: ${{ secrets.REACT_APP_KAKAOMAP_API_KEY_JS }}
       run: |
-        echo "REACT_APP_KAKAOMAP_API_KEY_JS">>.env.production
+        echo "REACT_APP_KAKAOMAP_API_KEY_JS=${{ secrets.REACT_APP_KAKAOMAP_API_KEY_JS }}">>.env.production
         cat .env.production
         ls -al
 
