--- a/default.conf
+++ b/default.conf
@@ -11,6 +11,22 @@ server {
         try_files $uri $uri/ /index.html =404;
     }
 
+    location /main {
+        proxy_pass  http://munji-back:8080;
+    }
+
+    location /map/search {
+        proxy_pass  http://munji-back:8080;
+    }
+
+    location /map {
+        proxy_pass  http://munji-back:8080;
+    }
+
+    location /cctv {
+        proxy_pass  http://munji-back:8080;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
